--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 
 ._border{
     width: 3.75rem;
-    border: 1px solid white;
+    border: 1px solid currentColor;
     margin: 0.5rem;
 }
 
@@ -38,7 +38,7 @@
 
     ._border{
         width: 10.25rem;
-        border: 1px solid white;
+        border: 1px solid currentColor;
         margin: 1.815rem;
     }
 
