--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
     background-color: var(--bg-light);
 }
 
+#text__green{
+    color: var(--bg__green);
+}
+
 .avatar {
     max-width: 16rem;
     margin: 0 auto;
